# Teletraan

./: .env.example  .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  render.yaml  requirements-dev.txt  requirements.txt
.github/: copilot-instructions.md
app/: __init__.py  main.py
app/ai/: __init__.py  base.py  nlu.py  (+3 more)
dashboard/: index.html
docs/: SKILLS_INDEX.md  Teletraan_SYSTEM_DESIGN_OVERVIEW.md  ai_providers.md  api_reference.md  architecture.md  conversation_flows.md  database_schema.md  deployment_guide.md  onboarding_guide.md  payment_gateways.md  teletraan_build.xml
migrations/: 001_create_extensions.sql  002_create_subscription_plans.sql  003_create_distributors.sql  004_create_customers.sql  005_create_catalog.sql  006_create_discount_rules.sql  007_create_delivery_zones.sql  008_create_sessions.sql  009_create_orders.sql  010_create_order_items.sql  011_create_order_status_history.sql  012_create_payments.sql  013_create_complaints.sql  014_create_support_tickets.sql  015_create_prospects.sql  016_create_service_registry.sql  017_create_notifications_log.sql  018_create_audit_log.sql  019_create_inventory_sync_log.sql  020_create_analytics_events.sql  021_create_rate_limits.sql  022_create_scheduled_messages.sql  023_create_catalog_import_history.sql  024_create_bot_configuration.sql  025_enable_rls_policies.sql  026_create_indexes.sql  027_seed_data.sql  028_create_analytics_aggregation_tables.sql
scripts/: create_distributor.py  rotate_api_keys.py  run_migrations.py  seed_catalog.py  test_webhook_locally.py
tests/: __init__.py
(+253 files in other folders)
